src/objects/Milestone1_Project__c.object
<CustomObject>
    <description>Force.com Labs - PM - A collaborative enterprise which has a planned goal. A project can have many milestones.</description>
    <fields>
        <fullName>Biz_Apps_Description__c</fullName>
        <description>Description, include related Biz Apps requests that were incorporated into the project</description>
        <label>Biz Apps Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Biz_Apps_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who on the Biz Apps team is leading this initiative</description>
        <inlineHelpText>Who on the Biz Apps team is leading this initiative</inlineHelpText>
        <label>Biz Apps Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Department</field>
                <operation>contains</operation>
                <value>Biz App</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Biz_Apps_Priority__c</fullName>
        <label>Biz Apps Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <description>Business Owner</description>
        <label>Business Owner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>Actual Project Completed Date</description>
        <inlineHelpText>Actual Project Completed Date</inlineHelpText>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biz Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning and Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People People</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Overall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - SBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Companywide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>A general description of the project.</inlineHelpText>
        <label>Overview</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>Est_Completed_Date__c - Kickoff__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days between Kickoff and Deadline.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Completed_Date__c</fullName>
        <inlineHelpText>The date by which the project is scheduled to be completed by.</inlineHelpText>
        <label>Est. Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <description>How many hours does Biz Apps owner expect this project will take?</description>
        <inlineHelpText>How many hours does Biz Apps owner expect this project will take?</inlineHelpText>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GoogleGanntUrl__c</fullName>
        <inlineHelpText>Calculated.</inlineHelpText>
        <label>GoogleGanntUrl</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kickoff__c</fullName>
        <inlineHelpText>What date should this project start?</inlineHelpText>
        <label>Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Deliverable_Date__c</fullName>
        <description>When is the deliverable date of the next milestone?</description>
        <label>Milestone Deliverable Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Status_Color__c</fullName>
        <formula>IF( ISPICKVAL(Milestone_Status__c, &apos;Red&apos;),
IMAGE(&quot;/resource/1379452927000/CS_Flag_Red&quot;, &quot;MISSED - SLA&quot;, 20, 20), 
IF ( ISPICKVAL(Milestone_Status__c, &apos;Green&apos;), 
IMAGE(&quot;/resource/1379452927000/CS_Flag_Green&quot;, &quot;Within SLA&quot;, 20, 20), 
IF( ISPICKVAL(Milestone_Status__c, &apos;Yellow&apos;), 
IMAGE(&quot;/resource/1379452927000/CS_Flag_Yellow&quot;, &quot;Pending - SLA&quot;, 20, 20), 
IF( ISPICKVAL(Milestone_Status__c, &apos;Black&apos;), 
IMAGE(&quot;/resource/1405031526000/Blackflag&quot;, &quot;Within SLA&quot;, 20, 20), 
&apos;None&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Status Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Status__c</fullName>
        <description>What&apos;s the status of our achieving this milestone?</description>
        <label>Milestone Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <description>What&apos;s the next Milestone we need to deliver on?</description>
        <label>Milestone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Project_Milestone_Due_Date__c</fullName>
        <inlineHelpText>Calculated as the next incomplete task with a due date in this project. This includes sub-milestones.</inlineHelpText>
        <label>Next Project Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Project_Top_Milestone_Due_Date__c</fullName>
        <inlineHelpText>The next incomplete milestone due date. This does not include sub-milestones.</inlineHelpText>
        <label>Next Project Top Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Incomplete_Milestones__c</fullName>
        <inlineHelpText>Calculated sum of the number of incomplete milestones assigned to this project. This includes sub-milestones in the project.</inlineHelpText>
        <label>Number of Incomplete Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Incomplete_Top_Milestones__c</fullName>
        <inlineHelpText>The number of incomplete milestones that are in this project. This does not count sub-milestones.</inlineHelpText>
        <label>Number of Incomplete Top Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Confluence_listing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check when project page is created and linked on confluence.</description>
        <label>Project Page and Confluence?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Page1__c</fullName>
        <description>Project Page and resources - rich text</description>
        <label>Project Page &amp; Resources</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Page__c</fullName>
        <description>Project Page URL</description>
        <label>Project Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Status_BudgetExpenseSummary__c</fullName>
        <formula>IF( Total_Expense_Budget__c &gt; 0,
IMAGE(
&quot;http://chart.apis.google.com/chart?chtt=Task+Expense+Budget+Analysis&amp;&quot; &amp;
&quot;chxr=0,0,&quot; &amp; Text(max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c)) &amp; &quot;&amp;&quot; &amp;
&quot;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322,666666&amp;&amp;&quot;&amp;
&quot;chdl=&quot;&amp;
&quot;Budget (&quot; &amp; TEXT(Total_Expense_Budget__c) &amp; &quot;)&quot;&amp;
&quot;|Planned (&quot; &amp; TEXT(Total_Expense_Budget_from_Milestones__c) &amp; &quot;)&quot;&amp;
&quot;|Estimated (&quot; &amp; TEXT(Total_Expense_Estimate__c) &amp; &quot;)&quot;&amp;
&quot;|Incurred (&quot; &amp; TEXT(Total_Expense_Incurred__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp;
TEXT( Total_Expense_Budget__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100 )&amp;&quot;|&quot;&amp; 
TEXT( Total_Expense_Budget_from_Milestones__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100)  &amp;&quot;|&quot; &amp; 
TEXT( Total_Expense_Estimate__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100 ) &amp;&quot;|&quot; &amp; 
TEXT(  Total_Expense_Incurred__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100) 
, &quot;Project Expense - Budget, Planned, Estimated, Incurred&quot;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Summary - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_BudgetMiletoneEstimate__c</fullName>
        <formula>&quot;http://chart.apis.google.com/chart?chtt=Task+Time+Budget+Analysis&amp;&quot;&amp;
&quot;chxr=0,0,&quot; &amp; Text(max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c)) &amp; &quot;&amp;&quot; &amp;
&quot;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322,666666&amp;&quot;&amp;
&quot;chdl=&quot;&amp;
&quot;Budget (&quot; &amp; TEXT(Total_Hours_Budget__c) &amp; &quot;)&quot;&amp;
&quot;|Planned (&quot; &amp; TEXT(Total_Hours_Budget_from_Milestones__c) &amp; &quot;)&quot;&amp;
&quot;|Estimated (&quot; &amp; TEXT(Total_Hours_Estimate__c) &amp; &quot;)&quot;&amp;
&quot;|Incurred (&quot; &amp; TEXT(Total_Hours_Incurred__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp;
TEXT( Total_Hours_Budget__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100 )&amp;&quot;|&quot;&amp; 
TEXT( Total_Hours_Budget_from_Milestones__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100)  &amp;&quot;|&quot; &amp; 
TEXT( Total_Hours_Estimate__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100 ) &amp;&quot;|&quot; &amp; 
TEXT(  Total_Hours_Incurred__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Summary - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Image_HoursSummary__c</fullName>
        <formula>IF( Total_Hours_Budget__c &gt; 0, 
IMAGE(Status_BudgetMiletoneEstimate__c, &quot;Hours Summary: Budgeted, Planned, Estimated and Incurred.&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Summary (chart) - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Image_OpenVComplete__c</fullName>
        <formula>IF( Status_TasksOpenComplete__c != &apos;&apos;,
IMAGE( Status_TasksOpenComplete__c , &quot;Open vs. Complete Tasks&quot;) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks (chart) - Deprec</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Img_OpenLateBlocked__c</fullName>
        <formula>IMAGE( Status_TasksOpenBlockedLate__c , &quot;Open, Late &amp; Blocked Tasks.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open, Late &amp; Blocked Tasks (chart) - Dep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <description>Reasoning for Milestone Status</description>
        <label>Status Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_TasksOpenBlockedLate__c</fullName>
        <formula>IF(max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) &gt; 0 , 
&quot;http://chart.apis.google.com/chart?chtt=Open+Task+Analysis&amp;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chxr=0,0,&quot; &amp; Text(max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ))&amp;&quot;&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322&amp;chdl=&quot;&amp;
&quot;Open (&quot; &amp; TEXT(Total_Open_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Late (&quot; &amp; TEXT(Total_Late_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Blocked (&quot; &amp; TEXT(Total_Blocked_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp; TEXT(Total_Open_Task_Count__c / max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) *100)&amp;&quot;|&quot;&amp; TEXT(Total_Late_Task_Count__c/ max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) *100) &amp;&quot;|&quot; &amp; TEXT(Total_Blocked_Task_Count__c/ max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) *100), &apos;/s.gif&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open, Late &amp; Blocked Tasks - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_TasksOpenComplete__c</fullName>
        <formula>&quot;http://chart.apis.google.com/chart?&quot;&amp;
&quot;chtt=Task+Analysis&amp;&quot;&amp;
&quot;chco=eeaa66,2299bb&amp;chs=300x225&amp;cht=p&amp;chd=t:&quot;&amp;Text(Total_Open_Task_Count__c)&amp;&quot;,&quot;&amp;Text(Total_Complete_Task_Count__c)&amp;&quot;&amp;chdl=&quot;&amp;
&quot;Open%20Tasks (&quot; &amp; TEXT (Total_Open_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Complete%20Tasks (&quot; &amp; TEXT (Total_Complete_Task_Count__c) &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The current status of the project.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>1. Requirements Gathering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Scoping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Release Date Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Pending Release Date Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Owner Testing and Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Blocked_Task_Count__c</fullName>
        <inlineHelpText>How many tasks associated with this project are blocked? (Calculated)</inlineHelpText>
        <label>Total Blocked Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Complete_Task_Count__c</fullName>
        <inlineHelpText>How many complete tasks are there in this project?  (Calculated.)</inlineHelpText>
        <label>Total Complete Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Budget__c</fullName>
        <inlineHelpText>The total expense budget for this project.</inlineHelpText>
        <label>Total Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Budget_from_Milestones__c</fullName>
        <inlineHelpText>Calculated from the milestone expense budgets assigned to this project.</inlineHelpText>
        <label>Total Expense Budget from Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Estimate__c</fullName>
        <inlineHelpText>Calculated from expense estimates on all child milestones</inlineHelpText>
        <label>Total Expense Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Incurred__c</fullName>
        <inlineHelpText>Calculated from expense records related to tasks on all child milestones</inlineHelpText>
        <label>Total Expense Incurred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Budget__c</fullName>
        <inlineHelpText>The total hours budget for this project.</inlineHelpText>
        <label>Total Hours Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Budget_from_Milestones__c</fullName>
        <inlineHelpText>Calculated from hours budgets for milestones in this project.</inlineHelpText>
        <label>Total Hours Budget from Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Estimate__c</fullName>
        <inlineHelpText>Calculated from hours estimates on all child milestones</inlineHelpText>
        <label>Total Hours Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Incurred__c</fullName>
        <inlineHelpText>Calculated from time records related to tasks on all child milestones</inlineHelpText>
        <label>Total Hours Incurred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Late_Task_Count__c</fullName>
        <inlineHelpText>How many tasks associated with this project are late?  (Calculated)</inlineHelpText>
        <label>Total Late Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Open_Task_Count__c</fullName>
        <inlineHelpText>How many open tasks are there in this project? (Calculated. Includes Late and Blocked tasks.)</inlineHelpText>
        <label>Total Open Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>objectives__c</fullName>
        <description>Quantified objectives.</description>
        <label>Objectives</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>roi__c</fullName>
        <label>ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>project</fullName>
        <active>true</active>
        <description>Project request</description>
        <label>Project</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Kickoff_before_deadline</fullName>
        <active>false</active>
        <description>Kickoff must be less or equal than the deadline</description>
        <errorConditionFormula>NOT(ISNULL(Kickoff__c)) &amp;&amp; NOT(ISNULL(Est_Completed_Date__c)) &amp;&amp; Est_Completed_Date__c &lt; Kickoff__c</errorConditionFormula>
        <errorDisplayField>Kickoff__c</errorDisplayField>
        <errorMessage>Kickoff must be less or equal than the deadline</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Expense_Budget_Negative_Numbers</fullName>
        <active>true</active>
        <errorConditionFormula>Total_Expense_Budget__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Total_Expense_Budget__c</errorDisplayField>
        <errorMessage>This value should be a positive number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Hours_Budget_Negative_Numbers</fullName>
        <active>true</active>
        <errorConditionFormula>Total_Hours_Budget__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Total_Hours_Budget__c</errorDisplayField>
        <errorMessage>This value should be a positive number</errorMessage>
    </validationRules>
</CustomObject>